<resources>


    <string name="app_name">Pawsitive Pals</string>
    <string name="SearchHint">Search</string>
    <string name="ParksButton">Parks</string>
    <string name="ProfileButton">Profile</string>
    <string name="DogsButton">Dogs</string>
    <string name="park_name">Park Name</string>
    <string name="dog_list">Dog List:</string>
    <string name="park_placeholder">Park Placeholder</string>

    <string name="signin">Sign In</string>
    <string name="signout">Sign Out</string>

    <string name="create">Create Account</string>

    <string name="email">Email</string>
    <string name="pass">Password (6+ characters)</string>
    <string name="add_dog">Add Dog</string>
    <string name="profile">Profile</string>
    <string name="user">User</string>
    <string name="image_url">Image Url</string>
    <string name="description">Description</string>
    <string name="owner">Owner</string>
    <string name="breed">Breed</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dog_image">Dog Image</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

</resources>
